--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
